src_old/objects/DatasourceGuide__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datasource</label>
        <referenceTo>Datasource__c</referenceTo>
        <relationshipLabel>GuideDataSource</relationshipLabel>
        <relationshipName>DataSource_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <label>Guide</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DatasourceGuide</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSG-{00000}</displayFormat>
        <label>DatasourceGuide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DatasourceGuides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>